--- a/Views/Shared/AdminLTE/_MainNavigation.cshtml
+++ b/Views/Shared/AdminLTE/_MainNavigation.cshtml
@@ -1,4 +1,5 @@
-﻿<aside class="main-sidebar sidebar-dark-primary elevation-4">
+﻿@using static AdminLTE.MVC.Helpers.NavigationIndicatorHelper;
+<aside class="main-sidebar sidebar-dark-primary elevation-4">
     <a href="~/Home" class="brand-link">
         <img src="~/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
              style="opacity: .8">
@@ -16,7 +17,8 @@
         <nav class="mt-2">
             <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                 <li class="nav-item ">
-                    <a asp-controller="Home" asp-action="Index" class="nav-link">
+                    <!-- link Home/Index -->
+                    <a asp-controller="Home" asp-action="Index" class="nav-link @Url.MakeActiveClass("home", "index")">
                         <i class="nav-icon fas fa-home"></i>
                         <p>
                             Home
@@ -24,7 +26,8 @@
                     </a>
                 </li>
                 <li class="nav-item ">
-                    <a asp-controller="Home" asp-action="Privacy" class="nav-link">
+                    <!-- link Home/Privacy -->
+                    <a asp-controller="Home" asp-action="Privacy" class="nav-link @Url.MakeActiveClass("home", "privacy")">
                         <i class="nav-icon fas fa-lock"></i>
                         <p>
                             Privacy
